conclui o loading, sigin, e home

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TxiluPizzas</title>
     <link rel="stylesheet" href="/public/index.css">
+    <link rel="stylesheet" href="/public/styleSheet/default-components/default-gif-load.css">
 </head>
 <body>
    <div class="container-logo">
     <div class="content-logo">
         <img width="300px" height="250px" class="logo" src="/public/img/logo/logo.png" alt="pizza">
-        <img class="ico-Loading" src="/public/img/ico/Dual Ring-1s-200px.gif" alt="">
+        <img  class="loading" src="/public/img/ico/Dual Ring-1s-200px.gif" alt="">
     </div>
    </div>
 
    <script>
     setInterval(() => {
-        window.location.href = "views/sig-in.html"
+       // window.location.href = "views/sig-in.html"
     }, 4000) 
    </script>
 </body>
