--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
    <script>
     setInterval(() => {
-       // window.location.href = "views/sig-in.html"
+       window.location.href = "views/sig-in.html"
     }, 4000) 
    </script>
 </body>
